Changes on landing page

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Aman Chaturvedi|info</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/utils.css">
-    <link rel="stylesheet" href="css/phone.css">
+    <!-- <link rel="stylesheet" href="css/phone.css"> -->
 </head>
 <body>
     <div class="main">
 
         <header>
-            <span id="name">
+            <span>
                 Aman Chaturvedi
             </span>
             <ul>
@@ -23,14 +23,17 @@
                 <li><a href="#">about</a></li>
             </ul>
         </header>
-        
+        <hr class="hr">
         <div class="container">
             <div class="quote_bubble">
                 <span id="quote">
-                    “Content precedes design. Design in the absence of content is not design, it’s decoration.” 
-            </span> 
-            – Jeffrey Zeldman
-        </div>
+                    <span class="t-a-l">
+                    I, am<br>
+                    </span> 
+                    a <span>Web Designer</span> and<span>developer</span>based in Uttar Pradesh, India.Experienced in designing  and developing dynamic websites. "
+                </span> 
+            </div>
+            Check out my work below<i class="arrow down"></i>
     </div>
 
     <div class="content">
