Last change for the day

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <div class="quote_bubble">
                 <span id="quote">
                     <span class="t-a-l">
-                    I, am<br>
+                    I, am
                     </span> 
-                    a <span>Web Designer</span> and<span>developer</span>based in Uttar Pradesh, India.Experienced in designing  and developing dynamic websites. "
+                    a <span>Web Designer</span> and <span>developer</span> based in Uttar Pradesh, India.Experienced in designing  and developing dynamic websites.
                 </span> 
             </div>
             Check out my work below<i class="arrow down"></i>
