--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     </div>    
 <section id="project_section">
     <div class="content">
-        <div class="box">projects</div>
+        <div class="box">
+            <div class="innerBox"></div>
+        </div>
         <div class="box">projects</div>
         <div class="box">projects</div>
         <!-- <div class="box">projects</div> -->
