--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aman Chaturvedi|info</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/utils.css">
-    <!-- <link rel="stylesheet" href="css/phone.css"> -->
-</head>
-<body>
-    <div class="main">
-
-        <header>
-            <span>
-                Aman Chaturvedi
-            </span>
-            <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">articles</a></li>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Aman Chaturvedi|info</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/utils.css">
+        <!-- <link rel="stylesheet" href="css/phone.css"> -->
+    </head>
+    <body>
+        <div class="main">
+            
+            <header>
+                <span>
+                    Aman Chaturvedi
+                </span>
+                <ul>
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">articles</a></li>
                 <li><a href="#">projects</a></li>
                 <li><a href="#">about</a></li>
             </ul>
@@ -29,19 +29,21 @@
             <div class="quote_bubble">
                 <span id="quote">
                     <span class="t-a-l">
-                    I, am
+                        I, am
                     </span> 
                     a <span>Web Designer</span> and <span>developer</span> based in Uttar Pradesh, India.Experienced in designing  and developing dynamic websites.
                 </span> 
             </div>
-           <a href="#project_section">
-            Check out my work below
-        </a> 
-    </div>    
-<section id="project_section">
-    <div class="content">
-        <div class="box">
-            <div class="innerBox"></div>
+            <a href="#project_section">
+                Check out my work below
+            </a> 
+        </div>    
+        <section id="project_section">
+        <div class="content">
+                <div class="box">
+                    <div class="innerBox">
+                        <img src="img/Isometric_Programmer_01__Converted__generated.jpg">
+                </div>
         </div>
         <div class="box">projects</div>
         <div class="box">projects</div>
